--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@larryhudson/mcp-server-template",
+  "name": "@larryhudson/mcp-server-example-image-block",
   "version": "0.1.2",
   "description": "Model Context Protocol (MCP) server for X Y Z",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
-    "simple-notion-mcp-server": "dist/index.js"
+    "mcp-server-example-image-block": "dist/index.js"
   },
   "scripts": {
     "build": "tsc",
@@ -24,7 +24,7 @@
   "type": "module",
   "repository": {
     "type": "git",
-    "url": "https://github.com/larryhudson/mcp-server-template.git"
+    "url": "https://github.com/larryhudson/mcp-server-example-image-block.git"
   },
   "files": [
     "dist",
@@ -33,5 +33,8 @@
   ],
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.10.2"
+  },
+  "devDependencies": {
+    "@types/node": "^22.15.2"
   }
 }
